Upgrade to OpenSearch 3.x build-tools, drop JDK 8 support, and bump Hadoop to 3.4.3 (#730)
Signed-off-by: Sotaro Hikita <bering1814@gmail.com>